--- a/block-BHaaak/index.html
+++ b/block-BHaaak/index.html
@@ -1,22 +1,46 @@
-<!-- 
-### Create a website having 3 separate pages.
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Simple BLOG</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<h1>Simple Page</h1>
+	<a href="home.html">Home</a>
+	<a href="about.html">About</a>
+	<a href="contact.html">Contact Us</a>
+		<h3 id="#top">Top</h3>
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>
+			This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>
+			This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
 
-#### TODO 💻:
+		<p>
+			This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
 
-1. Create a website having 3 separate pages.
-2. Each page must be connected.
-3. Each page must have the same structure. But the content can be different. The sample structure of a page has been shown below.
-4. There must be different images on each page.
-5. For the link use both relative path and absolute path depending upon the type of link.
-6. In the footer, we have some social media links also, connect each media link to your profile page.
-7. For mail me link in the footer, connect it to a mail. The mail must have a subject and body part also.
-8. Back to top button must take to the top of the page once clicked.
 
----
+	<footer>
+		<div>
+		<a href="#">Facebook</a>
+		<a href="#">Twitter</a>
+		<a href="#">You Tube</a>
+		</div>
+		<a href="mailto:xyz@gmail.com">Mail me</a>
+		<a href="#top">Back to top</a>
+	</footer>
 
-![alt text](https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/html-css/ex-1.png)
-
----
-
-- use appropriate semantic tags and keep the nesting and indentation clean.
-- All the absolute must open in a new window. -->
+</body>
+</html>
