--- a/block-BHaaam/index.html
+++ b/block-BHaaam/index.html
@@ -1,20 +1,49 @@
-<!-- 
-### Create a website having 3 separate pages.
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Simple BLOG</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<header>
+	<h1>Simple Page</h1>
+	<a href="home.html">Home</a>
+	<a href="about.html">About</a>
+	<a href="contact.html">Contact Us</a>
+	</header>
+		<img src="rabbits.jpg" alt="rabbits" height="200" width="200">
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<img src="rabbit1.jpg" alt="rabbit1" height="200" width="200">
+		<p>
+			This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>
+			This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
 
-#### TODO 💻:
+		<p>
+			This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
 
-1. Create a multi-page website, having at least three pages connected.
 
-2. Each page must have one header and footer.
+	<footer>
+		<div>
+		<a href="#">Facebook</a>
+		<a href="#">Twitter</a>
+		<a href="#">You Tube</a>
+		</div>
+		<a href="#">Mail me</a>
+		<a href="#">Back to top</a>
+	</footer>
 
-3. In between the header and footer, there must be the main content of the page.
-
-4. The main content must have at least two articles.
-
-5. Each article must have one image.
-
-6. Use different background colors for different pages.
-
-7. Using CSS resets is necessary.
-
-- use appropriate semantic tags and keep the nesting and indentation clean. -->
+</body>
+</html>
