--- a/block-BHaaan/index.html
+++ b/block-BHaaan/index.html
@@ -1,20 +1,52 @@
-<!---
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Simple BLOG</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<h1>Simple Blog</h1>
 
-### Create a blog page having 2 articles.
+	<header>
+	
+		<a href="#">Home</a>
+		<a href="#">About</a>
+		<a href="#">Blog</a>
+	</header>
+		<h3>Rabbits</h3>
+		<img src="rabbits.jpg" alt="rabbit1" height="200" width="200">
 
-#### TODO 🚀:
+	
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
 
-1. Create a blog page having 2 articles.
-2. The sample structure of a page has been shown below.
+		<h3>Rabbit1</h3>
+		<img src="rabbit1.jpg" alt="rabbit1" height="200" width="200">
 
----
+		<p>
+			This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
+		<p>
+			This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
 
-![alt text](https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/html-css/ex3.png)
+		<p>
+			This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.This is the Paragraph.
+		</p>
 
----
+		<footer>
+			<a href="#">Alt Campus@</a>
+		</footer>
 
-- Using a CSS reset is necessary.
+	
 
-- Use appropriate semantic tags and keep the nesting and indentation clean.
-
--->
+</body>
+</html>
